@@ -17,5 +17,7 @@
   "archangels": "Archangels",
   "angels": "Angels",
   "demigods": "Demigods",
-  "gods": "Gods"
+  "gods": "Gods",
+  "hours": "Hours",
+  "minutes": "Minutes"
 }
