@@ -515,8 +515,7 @@
     "no-cooldown": "Você já pode fazer isso!",
     "hunt": "Caçar",
     "vote": "Votar em Mim",
-    "minutes": "minutos",
-    "hours": "horas",
+    "time": "**{{time}}** {{subtime}} | **<t:{{unix}}:T>**",
     "click-to-vote": "Clique Para Votar"
   },
   "trisal": {
