@@ -18,5 +18,7 @@
   "giants": "Gigantes",
   "archangels": "Arcanjos",
   "estrelinhas": "Estrelinhas",
-  "gods": "Deuses"
+  "gods": "Deuses",
+  "hours": "Horas",
+  "minutes": "Minutos"
 }
