@@ -17,7 +17,6 @@ export default class LocaleStructure {
     try {
       const filepath = path.resolve(__dirname, '..', '..', 'src', 'locales');
       await i18next.use(translationBackend).init({
-        debug: true,
         ns: this.ns,
         preload: readdirSync(filepath),
         fallbackLng: 'pt-BR',
